--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <a href="">Features</a>
             <a href="">Team</a>
             <a href="">Sign In</a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
+            <a href=""></a>
         </nav>
     </header>
 </body>
